--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -27,6 +27,9 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
+    "@ivaoaero/react": "*",
+    "@ivaoaero/tokens": "*",
+    "@ivaoaero/eslint-config": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
