--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,9 +28,10 @@ jobs:
         shell: bash
         run: |
           npm run build -w packages/brand
-      - name: 'Build react-components storybook'
+      - name: 'Build react-components'
         shell: bash
         run: |
+          npm run build -w packages/react-components
           npm run build-storybook -w packages/react-components
       - name: 'Upload artifact'
         uses: actions/upload-pages-artifact@v1.0.4
