--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,7 +36,9 @@ jobs:
       - name: 'Upload artifact'
         uses: actions/upload-pages-artifact@v1.0.4
         with:
-          path: packages/react-components/storybook-static
+          path: |
+            packages/react-components/storybook-static
+            packages/react-components/static
   deploy:
     environment:
       name: github-pages
