--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -49,47 +49,48 @@
   },
   "dependencies": {
     "@ivaoaero/brand": "1.0.0",
-    "class-variance-authority": "^0.6.1",
-    "clsx": "^1.2.1",
-    "tailwind-merge": "^1.13.2"
+    "@tanstack/react-table": "^8.10.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
-    "@carbon/icons-react": "^11.21.0",
+    "@carbon/icons-react": "^11.28.0",
     "@ivaoaero/eslint-config": "^1.0.0",
-    "@storybook/addon-docs": "^7.0.24",
-    "@storybook/addon-essentials": "^7.0.24",
-    "@storybook/addon-interactions": "^7.0.24",
-    "@storybook/addon-links": "^7.0.24",
-    "@storybook/addon-mdx-gfm": "^7.0.24",
-    "@storybook/addon-styling": "^1.3.1",
-    "@storybook/addons": "^7.0.24",
-    "@storybook/blocks": "^7.0.24",
-    "@storybook/builder-vite": "^7.0.24",
-    "@storybook/react": "^7.0.24",
-    "@storybook/react-vite": "^7.0.24",
-    "@storybook/testing-library": "^0.2.0",
-    "@storybook/theming": "^7.0.24",
-    "@types/carbon__icons-react": "^11.20.0",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.1",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
+    "@storybook/addon-docs": "^7.5.1",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-mdx-gfm": "^7.5.1",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addons": "^7.5.1",
+    "@storybook/blocks": "^7.5.1",
+    "@storybook/builder-vite": "^7.5.1",
+    "@storybook/react": "^7.5.1",
+    "@storybook/react-vite": "^7.5.1",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^7.5.1",
+    "@types/carbon__icons-react": "^11.26.2",
+    "@types/react": "^18.2.30",
+    "@types/react-dom": "^18.2.14",
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
-    "storybook": "^7.0.24",
-    "tailwindcss": "^3.3.2",
+    "storybook": "^7.5.1",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-radix": "^2.8.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vite-plugin-dts": "^3.0.0-beta.3",
-    "vite-tsconfig-paths": "^4.2.0"
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "peerDependencies": {
-    "@carbon/icons-react": "^11.21.0",
+    "@carbon/icons-react": "^11.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
