--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -52,11 +52,12 @@
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@carbon/icons-react": "^11.28.0",
-    "@ivaoaero/eslint-config": "^1.0.0",
+    "@ivaoaero/eslint-config": "^1.0.1",
     "@storybook/addon-docs": "^7.5.1",
     "@storybook/addon-essentials": "^7.5.1",
     "@storybook/addon-interactions": "^7.5.1",
@@ -71,11 +72,12 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^7.5.1",
     "@types/carbon__icons-react": "^11.26.2",
-    "@types/react": "^18.2.30",
+    "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
