--- a/packages/brand/.eslintrc.json
+++ b/packages/brand/.eslintrc.json
@@ -1,5 +1,11 @@
 {
   "extends": [
     "@ivaoaero/eslint-config"
+  ],
+  "overrides": [
+    {
+      "files": ["**/*.{js,cjs}"],
+      "extends": ["plugin:@typescript-eslint/disable-type-checked"]
+    }
   ]
 }
