chore(eslint-config): add publish configs

--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["./index.js"]
+  "extends": ["./index.js"],
+  "overrides": [
+    {
+      "files": ["**/*.{js,cjs}"],
+      "extends": ["plugin:@typescript-eslint/disable-type-checked"]
+    }
+  ]
 }
