--- a/packages/react-components/.eslintrc.json
+++ b/packages/react-components/.eslintrc.json
@@ -6,6 +6,10 @@
       "rules": {
         "react-refresh/only-export-components": "off"
       }
+    },
+    {
+      "files": ["**/*.{js,cjs}"],
+      "extends": ["plugin:@typescript-eslint/disable-type-checked"]
     }
   ]
 }
