--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -42,8 +42,8 @@
   "scripts": {
     "dev": "vite --config vite.build.config.ts",
     "build": "tsc && vite build --config vite.build.config.ts",
-    "lint-fix": "eslint src --cache --fix --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint": "eslint src --cache --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint-fix": "eslint . --cache --fix --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --cache --report-unused-disable-directives --max-warnings 0",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -57,7 +57,11 @@
   },
   "devDependencies": {
     "@carbon/icons-react": "^11.28.0",
+    "@commitlint/cli": "^18.0.0",
+    "@commitlint/config-conventional": "^18.0.0",
     "@ivaoaero/eslint-config": "^1.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^11.0.0",
     "@storybook/addon-docs": "^7.5.1",
     "@storybook/addon-essentials": "^7.5.1",
     "@storybook/addon-interactions": "^7.5.1",
@@ -83,6 +87,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
+    "semantic-release": "^22.0.5",
+    "semantic-release-monorepo": "^7.0.5",
     "storybook": "^7.5.1",
     "tailwindcss": "^3.3.3",
     "tailwindcss-radix": "^2.8.0",
@@ -95,5 +101,9 @@
     "@carbon/icons-react": "^11.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "@ivaoaero:registry": "https://npm.pkg.github.com"
   }
 }
