--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,6 +28,12 @@ jobs:
   change-log:
     runs-on: self-hosted
     steps:
+      - name: wait for install
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: otto-de/github-actions-wait@v1.0
+        with:
+          step-name: install
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -41,11 +47,19 @@ jobs:
           path: |
             **/node_modules
           key: node_modules
+      - name: Rush Install
+        run: node common/scripts/install-run-rush.js install
       - name: Verify Change Logs
         run: node common/scripts/install-run-rush.js change --verify
   lint:
     runs-on: self-hosted
     steps:
+      - name: wait for install
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: otto-de/github-actions-wait@v1.0
+        with:
+          step-name: install
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -59,5 +73,7 @@ jobs:
           path: |
             **/node_modules
           key: node_modules
+      - name: Rush Install
+        run: node common/scripts/install-run-rush.js install
       - name: Verify Change Logs
         run: node common/scripts/install-run-rush.js lint
