ci: fix pipelines

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
         uses: snow-actions/git-config-user@v1.0.0
         with:
           name: AtmospherePublishBot
-          email: atmosphere-publish@noreply.ivao.aero
+          email: atmosphere-publish@ivao.aero
       - uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -31,12 +31,6 @@ jobs:
   lint:
     runs-on: self-hosted
     steps:
-      - name: wait for install
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: otto-de/github-actions-wait@v1.0
-        with:
-          step-name: install
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -44,7 +38,7 @@ jobs:
         uses: snow-actions/git-config-user@v1.0.0
         with:
           name: AtmospherePublishBot
-          email: atmosphere-publish@noreply.ivao.aero
+          email: atmosphere-publish@ivao.aero
       - uses: actions/setup-node@v3
         with:
           node-version: 20
