--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: snow-actions/git-config-user@v1.0.0
         with:
           name: AtmospherePublishBot
-          email: atmosphere-publish@noreply.ivao.aero
+          email: atmosphere-publish@ivao.aero
       - uses: actions/setup-node@v3
         with:
           node-version: 20
