--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Pull Request
 on:
   pull_request:
     types:
@@ -28,12 +28,6 @@ jobs:
   change-log:
     runs-on: self-hosted
     steps:
-      - name: wait for install
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: otto-de/github-actions-wait@v1.0
-        with:
-          step-name: install
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -51,29 +45,3 @@ jobs:
         run: node common/scripts/install-run-rush.js install
       - name: Verify Change Logs
         run: node common/scripts/install-run-rush.js change --verify
-  lint:
-    runs-on: self-hosted
-    steps:
-      - name: wait for install
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: otto-de/github-actions-wait@v1.0
-        with:
-          step-name: install
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@ivaoaero'
-      - uses: actions/cache@v3
-        with:
-          path: |
-            **/node_modules
-          key: node_modules
-      - name: Rush Install
-        run: node common/scripts/install-run-rush.js install
-      - name: Verify Change Logs
-        run: node common/scripts/install-run-rush.js lint
