feat(eslint): working config package

--- a/tools/eslint/tsconfig.json
+++ b/tools/eslint/tsconfig.json
@@ -17,8 +17,5 @@
     "module": "CommonJS"
   },
   "exclude": ["node_modules", "dist", "index.js"],
-  "include": [
-    "src",
-    ".eslintrc.json"
-  ]
+  "include": ["src", ".eslintrc"]
 }
