--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ivaoaero/eslint-config",
-  "description": "IVAO Atmosphere design system eslint and prettier config package.",
+  "description": "IVAO eslint config.",
   "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,8 +30,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "lint": "eslint  --cache --report-unused-disable-directives --max-warnings 0",
-    "lint-fix": "eslint  --cache --report-unused-disable-directives --max-warnings 0 --fix"
+    "lint": "eslint . --cache --report-unused-disable-directives --max-warnings 0",
+    "lint-fix": "eslint . --cache --report-unused-disable-directives --max-warnings 0 --fix",
+    "format": "prettier . --write --cache"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -46,7 +47,11 @@
     "eslint-plugin-tailwindcss": "^3.13.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@ivaoaero/prettier-config": "workspace:*",
+    "@types/eslint": "^8.44.8",
+    "@types/node": "^20.10.4",
+    "prettier": "^3.1.0"
   },
   "peerDependencies": {
     "eslint": "^8.55.0"
