feat(prettier): working config package

--- a/common/config/rush/.npmrc
+++ b/common/config/rush/.npmrc
@@ -10,6 +10,8 @@
 #   //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
 #
 
+auto-install-peers=true
+
 @ivaoaero:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${IVAO_NPM_REGISTRY_TOKEN}
 
