--- a/tools/prettier/.prettierignore
+++ b/tools/prettier/.prettierignore
@@ -1,3 +1,18 @@
+# Rush files
+common/changes/
+common/scripts/
+common/config/
+CHANGELOG.*
+
+# Package manager files
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+shrinkwrap.json
+
+# Build outputs
+lib
+
 # Prettier reformats code blocks inside Markdown, which affects rendered output
 *.md
 
