--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,5 +30,5 @@ jobs:
         run: node common/scripts/install-run-rush.js install
       - name: Rush Build
         run: node common/scripts/install-run-rush.js build
-      - name: Verify Change Logs
+      - name: Rush Lint
         run: node common/scripts/install-run-rush.js lint
