--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,9 +23,8 @@ jobs:
           scope: '@ivaoaero'
       - uses: actions/cache@v3
         with:
-          path: |
-            **/node_modules
-          key: node_modules
+          path: common/temp/pnpm-store
+          key: common/config/rush/pnpm-lock.yaml
       - name: Rush Install
         run: node common/scripts/install-run-rush.js install
       - name: Rush Build
