fix: serveral issues

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,9 +25,14 @@ jobs:
         with:
           path: common/temp/pnpm-store
           key: common/config/rush/pnpm-lock.yaml
+      - uses: actions/cache@v3
+        with:
+          path: |
+            **/.eslintcache
+          key: 'eslintcache'
       - name: Rush Install
         run: node common/scripts/install-run-rush.js install
       - name: Rush Build
-        run: node common/scripts/install-run-rush.js build --to eslint-config
+        run: node common/scripts/install-run-rush.js build --to atmosphere-brand
       - name: Rush Lint
         run: node common/scripts/install-run-rush.js lint
