ci: improve parallelism

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
-name: Lint
+name: Build
 on:
   push:
-    branches-ignore:
-      - main
+    branches: [ "main", "develop" ]
 
 jobs:
   prepare:
@@ -17,11 +16,11 @@ jobs:
           node-version: 20
           registry-url: 'https://npm.pkg.github.com'
           scope: '@ivaoaero'
-  install:
-    name: Install
+  build:
+    name: Build
+    runs-on: self-hosted
     needs:
       - prepare
-    runs-on: self-hosted
     steps:
       - uses: actions/cache@v3
         with:
@@ -29,17 +28,5 @@ jobs:
           key: common/config/rush/pnpm-lock.yaml
       - name: Rush Install
         run: node common/scripts/install-run-rush.js install
-  lint:
-    runs-on: self-hosted
-    steps:
-      - uses: actions/cache@v3
-        with:
-          path: |
-            **/.eslintcache
-          key: 'eslintcache'
-      - name: Rush Install
-        run: node common/scripts/install-run-rush.js install
-      - name: Rush Build
-        run: node common/scripts/install-run-rush.js build --to atmosphere-brand
-      - name: Rush Lint
-        run: node common/scripts/install-run-rush.js lint
+      - name: Rush build
+        run: node common/scripts/install-run-rush.js rebuild --verbose
