--- a/tools/eslint/.eslintrc
+++ b/tools/eslint/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["./dist/index.js"],
+  "extends": ["./index.js"],
   "parserOptions": {
     "sourceType": "script",
     "tsconfigRootDir": "./",
