--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -2,10 +2,10 @@
   "name": "@ivaoaero/eslint-config",
   "description": "IVAO eslint config.",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "index.js",
+  "module": "index.js",
   "files": [
-    "dist"
+    "/*.js"
   ],
   "repository": {
     "type": "git",
