--- a/brand/package.json
+++ b/brand/package.json
@@ -47,11 +47,11 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@ivaoaero/eslint-config": "workspace:*",
     "@ivaoaero/prettier-config": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "eslint": "^8.55.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "eslint": "8.56.0",
+    "eslint-plugin-prettier": "5.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "prettier": "^3.1.0",
+    "prettier": "3.1.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
