--- a/tools/prettier/package.json
+++ b/tools/prettier/package.json
@@ -34,19 +34,18 @@
     "lint-fix": "eslint . --cache --report-unused-disable-directives --max-warnings 0 --fix",
     "format": "prettier . --write --cache"
   },
-  "dependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@typescript-eslint/parser": "^6.13.2",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@types/node": "^20.10.4",
-    "eslint": "^8.55.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@typescript-eslint/parser": "6.15.0",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@types/node": "20.10.5",
+    "eslint": "8.56.0",
+    "eslint-plugin-prettier": "5.1.0",
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "prettier": "^3.1.0"
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "prettier": "^3.1.1"
   },
   "publishConfig": {
     "access": "public",
