--- a/brand/package.json
+++ b/brand/package.json
@@ -44,16 +44,16 @@
     "format": "prettier . --write --cache"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@ivaoaero/eslint-config": "workspace:*",
     "@ivaoaero/prettier-config": "workspace:*",
-    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
     "eslint": "8.56.0",
-    "eslint-plugin-prettier": "5.1.0",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "prettier": "3.1.1",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-tailwindcss": "3.14.0",
+    "prettier": "3.2.4",
+    "tsup": "8.0.1",
+    "typescript": "5.3.3"
   },
   "publishConfig": {
     "access": "public",
