--- a/components/react/package.json
+++ b/components/react/package.json
@@ -48,60 +48,57 @@
   },
   "dependencies": {
     "@ivaoaero/atmosphere-brand": "workspace:*",
-    "@tanstack/react-table": "^8.10.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "@tanstack/react-table": "8.11.6",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "tailwind-merge": "2.2.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@carbon/icons-react": "^11.31.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@ivaoaero/eslint-config": "workspace:*",
     "@ivaoaero/prettier-config": "workspace:*",
-    "@storybook/addon-docs": "^7.6.4",
-    "@storybook/addon-essentials": "^7.6.4",
-    "@storybook/addon-interactions": "^7.6.4",
-    "@storybook/addon-links": "^7.6.4",
-    "@storybook/addon-mdx-gfm": "^7.6.4",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/addons": "^7.6.4",
-    "@storybook/blocks": "^7.6.4",
-    "@storybook/builder-vite": "^7.6.4",
-    "@storybook/react": "^7.6.4",
-    "@storybook/react-vite": "^7.6.4",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^7.6.4",
-    "@typescript-eslint/eslint-plugin": "6.15.0",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
+    "@storybook/addon-docs": "7.6.10",
+    "@storybook/addon-essentials": "7.6.10",
+    "@storybook/addon-interactions": "7.6.10",
+    "@storybook/addon-links": "7.6.10",
+    "@storybook/addon-mdx-gfm": "7.6.10",
+    "@storybook/addon-styling": "1.3.7",
+    "@storybook/addons": "7.6.10",
+    "@storybook/blocks": "7.6.10",
+    "@storybook/builder-vite": "7.6.10",
+    "@storybook/react": "7.6.10",
+    "@storybook/react-vite": "7.6.10",
+    "@storybook/testing-library": "0.2.2",
+    "@storybook/theming": "7.6.10",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.17",
     "eslint": "8.56.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "5.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "postcss": "^8.4.32",
-    "prettier": "3.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "storybook": "^7.6.4",
-    "tailwindcss": "^3.3.6",
-    "tailwindcss-radix": "^2.8.0",
-    "typescript": "^5.3.3",
-    "vite": "^4.5.1",
-    "vite-plugin-dts": "^3.6.4",
-    "vite-tsconfig-paths": "^4.2.2"
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "eslint-plugin-storybook": "0.6.15",
+    "eslint-plugin-tailwindcss": "3.14.0",
+    "postcss": "8.4.33",
+    "prettier": "3.2.4",
+    "rollup-plugin-analyzer": "4.0.0",
+    "storybook": "7.6.10",
+    "tailwindcss": "3.4.1",
+    "tailwindcss-radix": "2.8.0",
+    "typescript": "5.3.3",
+    "vite": "4.5.1",
+    "vite-plugin-dts": "3.7.1",
+    "vite-tsconfig-paths": "4.3.1"
   },
   "peerDependencies": {
-    "@carbon/icons-react": "^11.31.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@carbon/icons-react": "11.33.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "publishConfig": {
     "access": "public",
