--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -35,26 +35,26 @@
     "format": "prettier . --write --cache"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "6.15.0"
+    "@typescript-eslint/parser": "6.19.0"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@ivaoaero/prettier-config": "workspace:*",
-    "@types/eslint": "8.56.0",
-    "@types/node": "20.10.5",
-    "prettier": "3.1.1"
+    "@types/eslint": "8.56.2",
+    "@types/node": "20.11.5",
+    "prettier": "3.2.4"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.15.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "5.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-tailwindcss": "^3.13.0"
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "eslint-plugin-storybook": "0.6.15",
+    "eslint-plugin-tailwindcss": "3.14.0"
   },
   "publishConfig": {
     "access": "public",
