feat(react): add `AlertDialog` component

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -31,6 +31,10 @@
       "allowedCategories": [ "brand", "react", "tools" ]
     },
     {
+      "name": "@radix-ui/react-alert-dialog",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@semantic-release/git",
       "allowedCategories": [ "brand", "react", "tools" ]
     },
