--- a/components/react/package.json
+++ b/components/react/package.json
@@ -50,6 +50,7 @@
     "@ivaoaero/atmosphere-brand": "workspace:*",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-label": "~2.0.2",
+    "@radix-ui/react-toast": "1.1.5",
     "@tanstack/react-table": "8.11.6",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
