--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,6 +11,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Git config user
+        uses: snow-actions/git-config-user@v1.0.0
+        with:
+          name: AtmospherePublishBot
+          email: atmosphere-publish@ivao.aero
       - uses: actions/setup-node@v3
         with:
           node-version: 20
