--- a/components/react/tsconfig.json
+++ b/components/react/tsconfig.json
@@ -28,13 +28,14 @@
     "paths": {
       "@components/*": ["components/*"],
       "@utils/*": ["lib/utils/*"],
+      "@hooks/*": ["lib/hooks/*"],
       "@stories/*": ["stories/*"],
       "@styles/*": ["styles/*"],
       "src/*": ["./*"],
-      "static/*": ["../static/*"]
-    }
+      "static/*": ["../static/*"],
+    },
   },
   "include": ["src", "*.config.ts", "*.config.js"],
   "exclude": ["node_modules", "dist"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
