--- a/brand/tsconfig.json
+++ b/brand/tsconfig.json
@@ -13,8 +13,8 @@
     "preserveWatchOutput": true,
     "skipLibCheck": true,
     "strict": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src"]
+  "include": ["src"],
 }
