feat(label): add Label atom ATMOS-25

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -35,6 +35,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-label",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@semantic-release/git",
       "allowedCategories": [ "brand", "react", "tools" ]
     },
