--- a/components/react/package.json
+++ b/components/react/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@ivaoaero/atmosphere-brand": "workspace:*",
     "@radix-ui/react-alert-dialog": "1.0.5",
+    "@radix-ui/react-label": "~2.0.2",
     "@tanstack/react-table": "8.11.6",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
