feat(react): add switch component

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -39,6 +39,10 @@
       "allowedCategories": [ "react" ]
     },
     {
+      "name": "@radix-ui/react-switch",
+      "allowedCategories": [ "react" ]
+    },
+    {
       "name": "@radix-ui/react-toast",
       "allowedCategories": [ "react" ]
     },
