--- a/components/react/package.json
+++ b/components/react/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-checkbox": "1.0.4",
     "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "1.1.5",
     "@tanstack/react-table": "8.11.8",
